# SMC

./: README.md  deploy.py
SMC/: clade.hpp  forest.hpp  main.cpp
SMC.xcodeproj/: project.pbxproj
SMC.xcodeproj/xcuserdata/analisamilkey.xcuserdatad/xcschemes/: xcschememanagement.plist
SMC/simulation-test/: anova_template.py  deploy.py  deploy_template.py  master-deploy.py
SMC/simulation-test/old/: anova-means-template-paup-dist.py  test.sh
SMC/src/: 99genes.nex  bundle.hpp  clade.hpp  conditionals.hpp  data.hpp  datatype.hpp  forest-extension.hpp  forest-func.hpp  forest.hpp  g.hpp  genetic_code.hpp  likelihood.hpp  lot.hpp  main.cpp  make-file-hpc-mt  make-file-hpc-mt-JC  makefile-hpc-mpi  makefile-mac-mpi  meson.build  node.hpp  opvertex.hpp  partial_store.hpp  particle.hpp  partition.hpp  proj.conf  proj.hpp  rbcl10.nex  rbcl10.tre  sequences.nex  sim_network_data.nex  species-forest.hpp  split.hpp  test.tre  tree.hpp  tree_manip.hpp  tree_summary.hpp  valgrind.h  xproj.hpp  xstrom.hpp
simulation-test/: anova-full-template.py  anova-means-template.py  copydata_template.py  deploy-dub.py  deploy-old.py  deploy.py  newer-deploy.py  old-deploy.py  old_deploy_template.py  old_deploy_template2.py
simulation-test-old/: anova-means-template.py  master-deploy.py
simulation-test/old/: deploy-paup-dist.py  old-deploy.py  smc
small-sim/: LoRaD.Rmd  LoRaD.html  gene_trees_sim.txt  loradml_gene.conf  loradml_species.conf  readme.txt  simulated.nex  species_trees_sim.txt
src/: Header.h  main.cpp
test2/: concat-files.R
